<resources>
    <string name="app_name" translatable="false">Sightseek</string>
    <string name="main_stop">Stop</string>
    <string name="main_record">Record</string>
    <string name="main_map">Map</string>
    <string name="main_time">Time</string>
    <string name="main_speed">Speed: %1$.2f km/h</string>
    <string name="main_distance">Distance: %1$.2f km</string>
    <string name="save_title">Save your Activity</string>
    <string name="save_discard">Discard</string>
    <string name="save_save">Save</string>
    <string name="save_titlehint">Title</string>
    <string name="save_distance">Distance</string>
    <string name="main_distancevalue" translatable="false">%1$.2f km</string>
    <string name="banner_imgdesc">This image serves as a simple background for the banner page.</string>
    <string name="banner_main">There is a whole world out ready to be explored.</string>
    <string name="banner_extrafeatures">Creating an account will grant access to leaderboards and much more.</string>
    <string name="banner_register">Register</string>
    <string name="banner_login">Already have an account?</string>
    <string name="banner_useoffline">Use app without an account</string>
    <string name="login_login">Log in</string>
    <string name="login_email" translatable="false">Email</string>
    <string name="login_password">Password</string>
    <string name="login_noaccount">I don\'t have an account yet</string>
    <string name="register_register">Register</string>
    <string name="register_username">Username (3–18 characters)</string>
    <string name="register_password1">Password (8–32 characters)</string>
    <string name="register_password2">Confirm password</string>
    <string name="register_alreadyhaveaccount">I already have an account</string>
    <string name="login_imgdesc">This image serves as a simple background for the login page.</string>
    <string name="register_createaccount">Create an account</string>
    <string name="register_error_username_empty">Username cannot be empty!</string>
    <string name="register_error_username_short">Username is too short!</string>
    <string name="register_error_username_exists">This username is taken.</string>
    <string name="register_error_email_empty">Email address cannot be empty!</string>
    <string name="register_error_email_invalidformat">Invalid email address format!</string>
    <string name="register_error_password_doesntmatch">Passwords do not match!</string>
    <string name="register_error_password_2short">Confirmation password is too short!</string>
    <string name="register_error_password_1short">Password is too short!</string>
    <string name="register_error_password_2empty">Confirmation password cannot be empty!</string>
    <string name="register_error_password_1empty">Password cannot be empty!</string>
    <string name="topmenu_statistics">Statistics</string>
    <string name="topmenu_profile">Profile</string>
    <string name="main_ideas">Ideas</string>
    <string name="main_leaderboard">Leaderboards</string>
    <string name="travelmethod_other">Other</string>
    <string name="travelmethod_micro">Micromobility</string>
    <string name="travelmethod_loco">Locomotor</string>
    <string name="example_sampletext" translatable="false">SAMPLE TEXT</string>
    <string name="example_example" translatable="false">EXAMPLE</string>
    <string name="example_value" translatable="false">432567</string>
    <string name="main_filterdesc">Filter</string>
    <string name="main_searchhint">Search for title…</string>
    <string name="menu_filter_recent">New</string>
    <string name="menu_filter_old">Old</string>
    <string name="menu_filter_az" translatable="false">A-Z</string>
    <string name="menu_filter_za" translatable="false">Z-A</string>
    <string name="menu_filter_smalldist">Distance (Low to High)</string>
    <string name="menu_filter_bigdist">Distance (High to Low)</string>
    <string name="menu_filter_short">Elapsed time (Short to Long)</string>
    <string name="menu_filter_long">Elapsed time (Long to Short)</string>
    <string name="register_error_unknown">An unknown error has occurred. Please try again later.</string>
    <string name="idea_title">How about…</string>
    <string name="idea_ignore">Ignore</string>
    <string name="idea_next">Next</string>
    <string name="idea_imgdesc">An image showcasing the idea to visit.</string>
    <string name="idea_googleicondesc">An image of the Google logo.</string>
    <string name="idea_location">Location</string>
    <string name="idea_median">Median</string>
    <string name="idea_lucky">I\'m feeling lucky</string>
    <string name="idea_reference">Reference point</string>
    <string name="idea_radius">Radius</string>
    <string name="idea_loading">Loading…</string>
    <string name="idea_wait">Please wait.</string>
    <string name="idea_sad" translatable="false">:(</string>
    <string name="idea_noactivities">No activities found.</string>
    <string name="idea_typelocation">%1$s in %2$s</string>
    <string name="idea_radiuskm" translatable="false">%1$.0f km</string>
    <string name="idea_nothingwasfound">Nothing was found</string>
    <string name="idea_increaseradius">Try increasing the radius</string>
    <string name="locationselectpopup_select">Select</string>
    <string name="activity_deletebtndesc">Delete</string>
    <string name="statistics_distancecard_startingtext">During your Sightseek career you have travelled</string>
    <string name="statistics_distancecard_distancevalue">%1$.2f kilometers</string>
    <string name="statistics_distancecard_randomcontext1">That\'s about %1$.0f Big Mac burgers.</string>
    <string name="statistics_distancecard_randomcontext2">That\'s about %1$.1f Polar bears.</string>
    <string name="statistics_distancecard_randomcontext3">That\'s about %1$.2f Football fields.</string>
    <string name="statistics_distancecard_randomcontext4">That\'s about %1$.3f Liechtensteins.</string>
    <string name="statistics_distancecard_randomcontext5">That\'s about %1$.4f Moons.</string>
    <string name="statistics_timecard_timevalue">%1$.2f days</string>
    <string name="statistics_timecard_startingtext">You\'ve done this over a period of</string>
    <string name="statistics_timecard_context1">It ain\'t much, but it\'s honest work.</string>
    <string name="statistics_timecard_context2">A good start can be the key to success.</string>
    <string name="statistics_timecard_context3">Keep it up, champ.</string>
    <string name="statistics_timecard_context4">The sun doesn\'t scare you anymore.</string>
    <string name="statistics_timecard_context5">You\'re active and you know that pretty well.</string>
    <string name="statistics_timecard_context6">It\'s time to go inside.</string>
    <string name="statistics_cardbtndesc">Card view</string>
    <string name="statistics_detailedbtndesc">Detailed view</string>
    <string name="statistics_categorycard_startingtext">Your favorite type of activity is</string>
    <string name="statistics_categorycard_locomotor">Power to you.</string>
    <string name="statistics_categorycard_micromobility">Distance over details.</string>
    <string name="statistics_categorycard_default">How?</string>
    <string name="statistics_categorycard_other">Filthy cheater.</string>
    <string name="statistics_topcard_startingtext">This is you, at your best.</string>
    <string name="statistics_topcard_longestdistance">Longest distance</string>
    <string name="statistics_topcard_longesttime">Longest time</string>
    <string name="profile_logout">Log out</string>
    <string name="leaderboard_grid">Grid</string>
    <string name="leaderboard_regionaldistance">Regional Distance</string>
    <string name="statistics_screenshotbtndesc">Take screenshot</string>
    <string name="record_heatmapdesc">Heatmap</string>
    <string name="record_lockdesc">Lock</string>
    <string name="card_activity_routedesc">Route</string>
    <string name="login_signin">Sign in</string>
    <string name="record_polylinedesc">Polyline</string>
    <string name="main_filtermenu_sortby">Sort by</string>
    <string name="main_filtermenu_categories">Categories</string>
    <string name="main_filtermenu_apply">Apply</string>
    <string name="login_error_incorrect">Incorrect email or password.</string>
    <string name="register_error_email_taken">Email address is already taken.</string>
    <string name="idea_add">Add</string>
    <string name="record_attractionsdesc">Attractions</string>
    <string name="ideapopup_markasvisited">Mark as visited</string>
    <string name="ideapopup_removefromsaved">Remove from saved</string>
    <string name="statistics_generalcard_general">General</string>
    <string name="statistics_generalcard_activitiescreated">Activities created: %1$.0f</string>
    <string name="statistics_generalcard_totalkilometers">Total distance: %1$.2f km</string>
    <string name="statistics_generalcard_totaltime">Time spent: %1$.2f days</string>
    <string name="statistics_generalcard_mainactivitytype">Favourite type of activity: %1$s</string>
    <string name="statistics_generalcard_longestdistance">Longest distance: %1$.2f km</string>
    <string name="statistics_generalcard_longesttime">Longest time: %1$s</string>
    <string name="statistics_generalcard_medianpoint">Median point: %1$.4f %2$.4f (%3$s)</string>
    <string name="statistics_generalcard_importedactivities">Imported activities: %1$.0f</string>
    <string name="statistics_generalcard_visitedcells">Visited cells: %1$.0f</string>
    <string name="statistics_generalcard_totalpoints">Recorded points: %1$.0f</string>
    <string name="statistics_generalcard_averagespeed">Average speed: %1$.2f km/h</string>
    <string name="travelmethod_micro_short">Micro</string>
    <string name="travelmethod_loco_short">Loco</string>
    <string name="statistics_percategory_activitiescreated">Activities created: %1$.0f</string>
    <string name="statistics_percategory_longesttime">Longest time: %1$s</string>
    <string name="statistics_percategory_approximatecaloriesburnt">Calories burnt: %1$.0f-%2$.0f kcal</string>
    <string name="statistics_percategory_approximatecaloriesnone">Calories burnt: 0 kcal</string>
    <string name="statistics_percategory_longestdistance">Longest distance: %1$.2f km</string>
    <string name="statistics_percategory_averagespeed">Average speed: %1$.2f km/h</string>
    <string name="statistics_percategory_totaltime">Total time: %1$.2f days</string>
    <string name="statistics_percategory_totaldistance">Total distance: %1$.2f km</string>
    <string name="save_manageideas">Manage your saved ideas</string>
    <string name="ideamanager_searchhint">Search for ideas…</string>
    <string name="ideamanager_visited">Visited</string>
    <string name="ideamanager_remove">Remove</string>
    <string name="ideamanager_saved">Saved</string>
    <string name="ideamanager_ignored">Ignored</string>
    <string name="ideamanager_filter_nameaz">Name A-Z</string>
    <string name="ideamanager_filter_nameza">Name Z-A</string>
    <string name="ideamanager_filter_placeaz">Place A-Z</string>
    <string name="ideamanager_filter_placeza">Place Z-A</string>
    <string name="idea_search">Search</string>
    <string name="idea_motto">Use search to find something new</string>
    <string name="idea_defaulttitle">Search for ideas</string>
    <string name="profile_importfromstrava">Import from Strava</string>
    <string name="strava_import">Import activities from Strava</string>
    <string name="strava_importmissing">Import missing</string>
    <string name="leaderboard_entry_placing" translatable="false">#%1$d</string>
    <string name="leaderboard_narrowsearch_continent">Continent</string>
    <string name="leaderboard_narrowsearch_country">Country</string>
    <string name="leaderboard_narrowsearch_region">Region</string>
    <string name="leaderboard_narrowsearch_subregion">Subregion</string>
</resources>