<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/statistics_detailedcontainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/statistics_generalcontainer"
        android:background="@drawable/generic_rounded_background"
        android:backgroundTint="@color/dark_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginBottom="12dp"
            android:text="@string/statistics_generalcard_general"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/statistics_generalcard_activitiescreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_generalcard_activitiescreated"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/statistics_generalcard_totalpoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_generalcard_totalpoints"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/statistics_generalcard_totalkilometers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_generalcard_totalkilometers"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/statistics_generalcard_totaltime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_generalcard_totaltime"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/statistics_generalcard_averagespeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_generalcard_averagespeed"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/statistics_generalcard_mainactivitytype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_generalcard_mainactivitytype"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/statistics_generalcard_visitedcells"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_generalcard_visitedcells"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/statistics_generalcard_longestdistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_generalcard_longestdistance"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/statistics_generalcard_longesttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_generalcard_longesttime"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/statistics_generalcard_medianpoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_generalcard_medianpoint"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/statistics_generalcard_isolatedpoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_generalcard_isolatedpoint"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/statistics_generalcard_importedactivities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_generalcard_importedactivities"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>