<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ideamanager_filtermenu_maincontainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="?android:attr/windowBackground"
    android:backgroundTint="@color/main_bg">

    <LinearLayout
        android:id="@+id/ideamanager_filtermenu_sortcontainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_filtermenu_sortby"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingBottom="6dp"/>

        <RadioGroup
            android:id="@+id/ideamanager_filtermenu_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ideamanager_filtermenu_nameaz"
                android:text="@string/ideamanager_filter_nameaz"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <RadioButton
                android:id="@+id/ideamanager_filtermenu_nameza"
                android:text="@string/ideamanager_filter_nameza"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <RadioButton
                android:id="@+id/ideamanager_filtermenu_placeaz"
                android:text="@string/ideamanager_filter_placeaz"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <RadioButton
                android:id="@+id/ideamanager_filtermenu_placeza"
                android:text="@string/ideamanager_filter_placeza"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_width="wrap_content"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ideamanager_filtermenu_categorycontainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_filtermenu_categories"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="6dp"/>

        <CheckBox
            android:id="@+id/ideamanager_filtermenu_saved"
            android:text="@string/ideamanager_saved"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/ideamanager_filtermenu_ignored"
            android:text="@string/ideamanager_ignored"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/ideamanager_filtermenu_visited"
            android:text="@string/ideamanager_visited"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights"/>

        <Button
            android:id="@+id/ideamanager_filtermenu_applybtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_purple"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:text="@string/main_filtermenu_apply" />
    </LinearLayout>
</LinearLayout>
