<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottommenu_main_ideas"
        android:title="@string/main_ideas"
        android:icon="@drawable/baseline_lightbulb_24"
        app:showAsAction="ifRoom"
        app:titleTextColor="@color/white"/>

    <item
        android:id="@+id/bottommenu_main_record"
        android:title="@string/main_map"
        android:icon="@drawable/baseline_map_24"
        app:showAsAction="ifRoom"
        app:titleTextColor="@color/white"/>

    <item
        android:id="@+id/bottommenu_main_leaderboard"
        android:title="@string/main_leaderboard"
        android:icon="@drawable/baseline_leaderboard_24"
        app:showAsAction="ifRoom"
        app:titleTextColor="@color/white"/>
</menu>