<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/leaderboard_entry"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="8dp"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/leaderboard_entry_placing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/leaderboard_entry_placing"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/leaderboard_entry_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/example_sampletext"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/leaderboard_entry_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingEnd="20dp"
        android:text="@string/main_distancevalue"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>