<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingVertical="22dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="Change Status" />

    <Button
        android:id="@+id/ideamanager_popup_savedbtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/generic_rounded_background"
        android:text="@string/ideamanager_saved"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_gravity="center"
        app:backgroundTint="@color/light_purple" />

    <Button
        android:id="@+id/ideamanager_popup_visitedbtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/generic_rounded_background"
        android:text="@string/ideamanager_visited"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_gravity="center"
        app:backgroundTint="@color/theme_main" />

    <Button
        android:id="@+id/ideamanager_popup_ignorebtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/generic_rounded_background"
        android:text="@string/idea_ignore"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_gravity="center"
        app:backgroundTint="@color/delete_red" />
</LinearLayout>